# BotColosseo

./: .gitignore  LICENSE  Plan.md  README.md  README_CN.md  THIRD_PARTY_NOTICES.md  env.yml  pyproject.toml  requirements.txt  script.md
.github/workflows/: quality.yml
.superpowers/sdd/: task-3-report.md
configs/: difficulty.yaml
configs/m1/: test.json  train.json  validation.json
configs/m2/: bc.yaml  demonstrations.yaml  evaluation.yaml  model.yaml  ppo.yaml  reward.yaml  test.json  train.json  validation.json
docs/: user-study.md
licenses/: FREEDOOM-BSD-3-CLAUSE.txt
scripts/: analyze_user_study.py  audit_all_style_difficulty.py  audit_defensive.py  audit_defensive_ppo.py  audit_difficulty.py  audit_duel_sync.py  audit_explorer.py  audit_explorer_ppo.py  audit_hybrid_all_style_difficulty.py  audit_hybrid_release.py  audit_m2_evidence.py  audit_m3_evidence.py  audit_m5_v2_training.py  audit_project_closeout.py  bootstrap_m3_pool.py  build_checkpoint_release.py  build_crystal_run.py  build_hybrid_release.py  build_m6_showcase_config.py  check_env.py  curate_user_study_clips.py  decide_m5_v2.py  evaluate_crossplay.py  evaluate_defensive.py  evaluate_difficulty.py  evaluate_explorer.py  evaluate_hybrid.py  evaluate_hybrid_difficulty.py  evaluate_m1.py  evaluate_m2.py  evaluate_m3.py  evaluate_native_style_difficulty.py  evaluate_style.py  export_hybrid_m6_metrics.py  export_m6_showcase_metrics.py  export_showcase_metrics.py  finalize_current_scenario.py  freeze_m3_candidate.py  generate_defensive_demonstrations.py  generate_demonstrations.py  (+47 more)
(+598 files in other folders)
