[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botcolosseo"
version = "0.1.0"
description = "Skill-preserving policy shaping for controllable visual game bots"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { file = "LICENSE" }
authors = [{ name = "Wencong Sheng" }]
dependencies = [
  "vizdoom==1.3.0",
  "gymnasium>=1.0,<2.0",
  "numpy>=1.24,<3.0",
  "PyYAML>=6.0,<7.0",
  "imageio>=2.34,<3.0",
  "imageio-ffmpeg>=0.5,<1.0",
]

[project.optional-dependencies]
training = [
  "torch>=2.6,<2.7",
  "pandas>=2.0,<3.0",
  "matplotlib>=3.7,<4.0",
  "opencv-python-headless>=4.8,<6.0",
  "tensorboard>=2.15,<3.0",
  "tqdm>=4.66,<5.0",
  "psutil>=5.9,<8.0",
  "scipy>=1.11,<2.0",
  "seaborn>=0.13,<1.0",
]
dev = [
  "pytest>=8.0,<10.0",
  "pytest-timeout>=2.3,<3.0",
  "pytest-cov>=5.0,<8.0",
  "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "integration: starts real ViZDoom or FFmpeg processes",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
